# tree-sitter-csproj

./: Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-csproj.h  tree-sitter-csproj.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_csproj/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCsprojTests/: TreeSitterCsprojTests.swift
example/: console.txt
src/: grammar.json  node-types.json  parser.c
test/corpus/: test1.txt
